--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    div{
+      width: 100px;
+      height: 100px;
+      background-color: cadetblue;
+    }
+  </style>
 </head>
 <body>
-  송수빈 포트폴리오
+  <div>
+
+  </div>
 </body>
 </html>
